[package]
name = "Authen-Jwt-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
jsonwebtoken = "9.3.0"
tokio = {version = "1.38.1", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4.38"
